# sem

./: CHANGELOG.md  README.md
crates/: README.md
crates/sem-cli/: Cargo.toml
crates/sem-cli/src/: main.rs
crates/sem-cli/src/commands/: blame.rs  diff.rs  graph.rs  impact.rs
crates/sem-cli/src/formatters/: json.rs  terminal.rs
crates/sem-cli/src/tui/: app.rs  detail.rs  http_state.rs  mod.rs  render.rs  review_state.rs
crates/sem-core/src/git/: bridge.rs
crates/sem-core/src/model/: change.rs  identity.rs
docs/: llms.txt
docs/implementation/: implementation-plan.md
docs/implementation/diff-tui-commit-navigation/: design.md  phase-task-plan.md  schema-proposal.md
docs/implementation/diff-tui-entity-navigation/: dependency-audit.md  design.md  phase-task-plan.md  schema-proposal.md
docs/implementation/diff-tui-entity-review-state/: design.md  phase-task-plan.md  schema-proposal.md
docs/implementation/diff-tui-footer-cell-layout/: design.md  phase-task-plan.md  schema-proposal.md
docs/implementation/diff-tui-full-entity-toggle/: design.md  phase-task-plan.md  schema-proposal.md
docs/implementation/diff-tui-http-state-impact-panel/: design.md  phase-task-plan.md  schema-proposal.md
docs/implementation/diff-tui-unified-stepping/: design.md  phase-task-plan.md  schema-proposal.md
docs/reference/: architecture.md
