[package]
name = "sem-cli"
version = "0.3.6"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sem"
path = "src/main.rs"

[dependencies]
sem-core = { path = "../sem-core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.29"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy", "default-syntaxes", "default-themes"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
